fix(tab-list):overflown tabs not showing on mobile fixed (#616)

--- a/packages/theme-default/src/components/Tabs/index.module.scss
+++ b/packages/theme-default/src/components/Tabs/index.module.scss
@@ -5,6 +5,7 @@
 
   :global(div[class*='language-']) {
     margin: 6px 0;
+
     code {
       background-color: var(--rp-c-bg);
     }
@@ -16,11 +17,12 @@
   padding-top: 4px;
   display: flex;
   min-width: 100%;
+  overflow-x: scroll;
 }
 
 .tab {
   color: var(--rp-c-text-2);
-  border-bottom: 1px solid transparent;
+  border-bottom: 2px solid transparent;
   box-sizing: border-box;
   margin-right: 10px;
   padding: 6px 12px;
@@ -42,4 +44,13 @@
 .selected {
   color: var(--rp-c-brand-dark);
   border-color: var(--rp-c-brand-dark);
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
